--- a/css/master.css
+++ b/css/master.css
@@ -5,86 +5,40 @@ body
 
     margin: 0;
     padding: 0;
+}
 
+
+
+.header
+{
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: 0;
+
+    color: white;
     background-color: #a0a090;
 }
 
-.main-container
+.header > p
 {
-    position: absolute;
-    top: 50px;
-    bottom: 50px;
+    font-size: 1.6em;
 
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-
-    width: 100%;
-
-    border-top: 1px solid black;
-    background-color: white;
-}
-
-.btn-col
-{
-    display: flex;
-    flex-basis: 50%;
-}
-
-.img-col
-{
-    display: flex;
-    flex-basis: 50%;
-    flex-direction: column;
-
-    height: 100%;
-
-    text-align: center;
-
-    background: rgba(255,255,255,.7) url(../resources/track.jpg) no-repeat center center;
-    background-size: cover;
-
-    background-blend-mode: lighten;
-}
-
-.img-col > div
-{
-    /*adding 4 empty divs is kinda hacky, but it works.
-    2% margins on the images are relative to total width.*/
-    height: 2%;
-}
-
-.img-col > img
-{
-    height: calc(92%/3);
-    margin: 0 auto;
-}
-
-
-.btn-container
-{
-    margin: 0 auto;
-
-    text-align: center;
-}
-
-.btn-container > p
-{
-    font-size: 3em;
-
-    margin: 0;
-
-    color: #509;
+    margin: 5px 20px;
 }
 
 .btn
 {
     font-size: 1.2em;
 
-    padding: 7px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 7px 0;
 
     cursor: pointer;
     user-select: none;
+    transition: all .1s;
+    text-align: center;
+    text-decoration: none;
 
     color: white;
     border-radius: 5px;
@@ -94,10 +48,15 @@ body
 .btn:active
 {
     transform: translate(1px,1px);
+
+    background-color: #509;
 }
 
 .footer
 {
+    font-size: 1.3em;
+    line-height: 30px;
+
     position: absolute;
     right: 0;
     bottom: 0;
@@ -105,22 +64,19 @@ body
 
     overflow: hidden;
 
-    height: 50px;
-    padding-left: 5%;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 5px 5%;
 
     color: white;
     background-color: #665;
 }
 
-.footer > p
+.footer::after
 {
-    font-size: 1.3em;
-    line-height: 40px;
-
-    margin: 5px 0;
-
-    vertical-align: middle;
+    content: '© 2017 cameron earl';
 }
+
 @font-face
 {
     font-family: 'Avenir';
